--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,23 @@
-sudo: required
-services:
-- docker
-env:
-  global:
-    # Ensure the install happens without prompts
-    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 language: node_js
 node_js:
-- '7.4'
-before_install:
-- npm install webpack -g
+  - 8
+
 install:
-- npm install
-after_success:
-  # publish to npm
-  - npm cache clean
-  - npm set init.author.name $NPM_USERNAME
-  - npm set init.author.email $NPM_EMAIL
-  - npm set init.author.url "https://flowappplatform.com
-  - npm --no-git-tag-version version 2.0.$TRAVIS_BUILD_NUMBER --force
-  - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
-  - sleep 10s
+  - npm install
+
+script:
+  - npm test
+
 deploy:
   provider: npm
   email: $NPM_EMAIL
   api_key: $NPM_TOKEN
+  script:
+    - echo "//registry.npmjs.org/:_password=${NPM_PASSWORD}" > ~/.npmrc
+    - echo "//registry.npmjs.org/:_authToken=${NPM_API_KEY}" >> ~/.npmrc
+    - echo "//registry.npmjs.org/:username=${NPM_USERNAME}" >> ~/.npmrc
+    - echo "//registry.npmjs.org/:email=${NPM_EMAIL}" >> ~/.npmrc
+    - npm publish
   on:
     branch: release
-#Notify Team on Slack
-notifications:
-  slack: hackerbaycompany:gm7nWJDLDtBRyF75VKLKOoMW
+    tags: false
