--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/FlowAppPlatform/flow-start-component/issues"
   },
-  "homepage": "https://github.com/FlowAppPlatform/flow-start-component#readme"
+  "homepage": "https://github.com/FlowAppPlatform/flow-start-component#readme",
+  "dependencies": {
+    "flow-platform-sdk": "^2.0.94"
+  }
 }
