changed metadata and port color

--- a/components.json
+++ b/components.json
@@ -7,13 +7,14 @@
     "type": "flow-graph-component",
     "file": "start.js",
     "metadata": {
-      "icon-color": "#7ab260"
+      "icon-color": "#2B5B08"
     },
     "ports": [
       {
         "id": "start",
         "title": "Start",
-        "description": "Start"
+        "description": "Start",
+        "color": "#2B5B08"
       }
     ],
     "properties": [],
