--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,22 @@
+sudo: required
 language: node_js
 node_js:
-  - 8
-
+- '10.1'
 install:
-  - npm install
-
+- npm install
+# run tests
 script:
-  - echo "No tests required"
-
+- npm test
+after_success:
+- npm cache clean
+- sh $TRAVIS_BUILD_DIR/.travis/version.sh
+- sleep 5s
+# publish to npm
 deploy:
+  skip_cleanup: true
   provider: npm
   email: $NPM_EMAIL
   api_key: $NPM_TOKEN
-  script:
-    - echo "//registry.npmjs.org/:_password=${NPM_PASSWORD}" > ~/.npmrc
-    - echo "//registry.npmjs.org/:_authToken=${NPM_API_KEY}" >> ~/.npmrc
-    - echo "//registry.npmjs.org/:username=${NPM_USERNAME}" >> ~/.npmrc
-    - echo "//registry.npmjs.org/:email=${NPM_EMAIL}" >> ~/.npmrc
-    - npm publish
   on:
     branch: release
     tags: false
-#Notify Team on Slack
-notifications:
-  slack: hackerbaycompany:gm7nWJDLDtBRyF75VKLKOoMW
